<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddGameActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/blue_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/new_game"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7"
        app:srcCompat="@drawable/ic_top_wave" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-16dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:drawableTint="@color/blue_wave"
        android:fontFamily="@font/roboto"
        android:text="@string/photo_title"
        android:textColor="@color/blue_button"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/ic_photo" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:srcCompat="@drawable/ic_gamepad_24" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:drawableTint="@color/blue_wave"
                android:fontFamily="@font/roboto"
                android:text="@string/information_title"
                android:textColor="@color/blue_button"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView11" />

            <EditText
                android:id="@+id/edit_text_new_game_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/hint_name_new_game"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edit_text_new_game_studio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/hint_producer_new_game"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_new_game_name"
                app:layout_constraintStart_toStartOf="@+id/edit_text_new_game_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_new_game_name"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edit_text_new_game_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/hint_description_new_game"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_new_game_studio"
                app:layout_constraintStart_toStartOf="@+id/edit_text_new_game_studio"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_new_game_studio"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/launch_date"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_new_game_description"
                app:layout_constraintStart_toStartOf="@+id/edit_text_new_game_description"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_new_game_description" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/game_status"
                android:textColor="@color/text_secondary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/editTextDate"
                app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/textView14">

                <RadioButton
                    android:id="@+id/button_finished_new_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/game_status_finished"
                    android:textColor="@color/text_secondary" />

                <RadioButton
                    android:id="@+id/button_playing_new_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/game_status_playing"
                    android:textColor="@color/text_secondary" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginBottom="-10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_bottom_wave" />

</androidx.constraintlayout.widget.ConstraintLayout>